# image_diff

./: CMakeLists.txt  build.sh  init.sh  rebuild.sh
src/: error.h  image.h  image_diff.h  main.cpp
tests/: test.cpp  test_image.cpp  test_image_iterator.cpp  test_perceived_diff.cpp  test_strict_diff.cpp
